# ITPlatform

./: .gitignore
Front/: package.json  (+1 more)
backend/: hack.py  main.py  pyproject.toml  test.db
backend/app/: logger.py  main.py
backend/app/api/: api.py  deps.py
backend/app/core/: config.py  database.py
backend/app/db/: __init__.py  db.py
backend/app/queries/: auth_worker.edgeql  complete_task_block.edgeql  complete_task_block_async_edgeql.py  create_employer.edgeql  create_employer_async_edgeql.py  create_employer_token.edgeql  create_employer_token_async_edgeql.py  create_mentor.edgeql  create_mentor_async_edgeql.py  create_token.edgeql  create_token_async_edgeql.py  create_vacancy.edgeql  create_vacancy_async_edgeql.py  create_worker.edgeql  create_worker_async_edgeql.py  create_worker_token.edgeql  create_worker_token_async_edgeql.py  fail_task_block.edgeql  fail_task_block_async_edgeql.py  get_answers.edgeql  get_answers_async_edgeql.py  get_employer_by_hash.edgeql  get_employer_by_hash_async_edgeql.py  get_employer_by_token.edgeql  get_employer_by_token_async_edgeql.py  get_mentors.edgeql  get_mentors_async_edgeql.py  get_task_block.edgeql  get_task_block_async_edgeql.py  get_task_block_challenges.edgeql  get_task_block_challenges_async_edgeql.py  get_task_blocks.edgeql  get_task_blocks_async_edgeql.py  get_task_blocks_challenges.edgeql  get_task_blocks_challenges_async_edgeql.py  get_task_blocks_preview.edgeql  get_task_blocks_preview_async_edgeql.py  get_vacancies.edgeql  get_vacancies_async_edgeql.py  get_vacancy.edgeql  (+9 more)
backend/dbschema/: default.esdl
(+178 files in other folders)
